--- a/html/git.html
+++ b/html/git.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Git - всему голова!</title>
+      <title>Основные команды Git</title>
       <link rel="stylesheet" type="text/css" href="../css/style.css">
       <link rel="stylesheet" type="text/css" href="../css/font-awesome.css">
       <link rel="shortcut icon" href="../img/fav.ico" type="image/x-icon">
@@ -12,21 +12,26 @@
    <body>
       <!--Card-->
       <div class="card">
-         <p class="subtitle">Git</p>
+         <p class="subtitle">Основные команды Git</p>
           <ul>
-            <li>ls - расшифровывается как "List files in the directory", что переводится как "перечислить все файлы в папке" или "вывести на экран список файлов в папке".</li>
-            <li>cd - расшифровывается как "Change directory", что переводится как "сменить папку" или "перейти в другую папку".</li>
-            <li>pwd - расшифровывается как "Present working directory", что переводится как "текущая рабочая директория". То есть команда pwd показывает, в какой сейчас папке мы находимся. </li>
-            <li>mkdir - расшифровывается как "Make directory", что переводится как "создать папку".</li>
-            <li>mv - расфшифровывается как"Move", что переводится как "переместить", "передвинуть". С помощью нее можно переместить, переименовать или удалить файл/</li>
+            <li><strong>git init</strong> - инициализация нового репозитория</li>
+            <li><strong>git clone [url]</strong> - клонирование удаленного репозитория</li>
+            <li><strong>git add [файл]</strong> - добавление файла в индекс</li>
+            <li><strong>git commit -m "сообщение"</strong> - фиксация изменений с комментарием</li>
+            <li><strong>git status</strong> - просмотр состояния репозитория</li>
+            <li><strong>git push</strong> - отправка изменений в удаленный репозиторий</li>
+            <li><strong>git pull</strong> - получение изменений из удаленного репозитория</li>
+            <li><strong>git branch</strong> - работа с ветками</li>
+            <li><strong>git checkout</strong> - переключение между ветками</li>
+            <li><strong>git merge</strong> - слияние веток</li>
          </ul>
       </div>
       <!--footer-->
       <footer class="animated fadeIn">
-         <p class="location" align="center">
-            <a href="mac.html">Вернуся на главную</a>
+         <p class="location" style="text-align: center;">
+            <a href="../index.html">Вернуться на главную</a>
          </p>
-         &copy; 202 4. SkyPro
+         &copy; 2024. SkyPro
       </footer>
    </body>
 </html>
