--- a/index.html
+++ b/index.html
@@ -8,32 +8,33 @@
       <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <style>
+         .center-text { text-align: center; }
+         .center-block { display: block; margin: 0 auto; }
+      </style>
    </head>
    <body>
       <!--Card-->
       <div class="card animated fadeIn">
-         <center><img class="center animated rollIn" src="img/ava.png" alt="avatar"></center>
+         <img class="center animated rollIn" src="img/ava.png" alt="avatar">
          <hr>
          <div class="name">
-            Основныые Интрументы
+            Основные Инструменты
          </div>
-         <p class="subtitle">Тетирование WEB-приложений</p>
+         <p class="subtitle">Тестирование WEB-приложений</p>
+         <p class="location center-text">
+            <a href="html/cmd.html">Командная строка Windows</a>
          </p>
-         <p class="location" align="center">
-            <a href="html/cmd.html">Командная строка Windos</a>
-         </p>
-         <p class="location" align="center">
+         <p class="location center-text">
             <a href="html/mac.html">Терминал MacOS</a>
          </p>
-          <p class="location" align="center">
+          <p class="location center-text">
             <a href="html/git.html">Git</a>
-         </p>
-         <p> <br>
          </p>
       </div>
       <!--footer-->
       <footer class="animated fadeIn">
-         &copy; 202 4. SkyPro
+         &copy; 2024. SkyPro
       </footer>
    </body>
 </html>
